--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,14 @@
-Django==4.2.0
-djangorestframework==3.14.0
+asgiref==3.8.1
 boto3==1.26.0
+botocore==1.29.165
+Django==4.2
+djangorestframework==3.14.0
+dnspython==2.6.1
+jmespath==1.0.1
+pymongo==4.8.0
+python-dateutil==2.9.0.post0
+pytz==2024.1
+s3transfer==0.6.2
+six==1.16.0
+sqlparse==0.5.1
+urllib3==1.26.19
