--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,11 @@ Django==4.2
 djangorestframework==3.14.0
 dnspython==2.6.1
 jmespath==1.0.1
+mysql-connector-python==9.0.0
+psycopg2==2.9.9
 pymongo==4.8.0
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.1
 s3transfer==0.6.2
 six==1.16.0
